codigog/.antlr/gcodeParser.py
# Generated from c:/Users/jfaga/Documents/Poli PC/4 ano/4 ano 1 semestre/PI-7/trajetória/pi7trajetoria2026/codigog/gcode.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gcodeParser ( Parser ):

    grammarFileName = "gcode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'N'", "'M30'", "'M02'", "'M01'", "'G01'", 
                     "'G00'", "'G02'", "'X'", "'Y'", "'I'", "'J'", "'\\r\\n'", 
                     "'\\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NUMBER", "WS", "STRING" ]

    RULE_def = 0
    RULE_fimprograma = 1
    RULE_statement = 2
    RULE_numerolinha = 3
    RULE_num3dig = 4
    RULE_mfim = 5
    RULE_mfunc = 6
    RULE_codfunc = 7
    RULE_coordx = 8
    RULE_coordy = 9
    RULE_coordi = 10
    RULE_coordj = 11
    RULE_coord = 12
    RULE_fimdelinha = 13

    ruleNames =  [ "def", "fimprograma", "statement", "numerolinha", "num3dig", 
                   "mfim", "mfunc", "codfunc", "coordx", "coordy", "coordi", 
                   "coordj", "coord", "fimdelinha" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    NUMBER=14
    WS=15
    STRING=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fimprograma(self):
            return self.getTypedRuleContext(gcodeParser.FimprogramaContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gcodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(gcodeParser.StatementContext,i)


        def getRuleIndex(self):
            return gcodeParser.RULE_def




    def def_(self):

        localctx = gcodeParser.DefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 28
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 31 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 33
            self.fimprograma()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FimprogramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numerolinha(self):
            return self.getTypedRuleContext(gcodeParser.NumerolinhaContext,0)


        def mfim(self):
            return self.getTypedRuleContext(gcodeParser.MfimContext,0)


        def getRuleIndex(self):
            return gcodeParser.RULE_fimprograma




    def fimprograma(self):

        localctx = gcodeParser.FimprogramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_fimprograma)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.numerolinha()
            self.state = 36
            self.mfim()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numerolinha(self):
            return self.getTypedRuleContext(gcodeParser.NumerolinhaContext,0)


        def codfunc(self):
            return self.getTypedRuleContext(gcodeParser.CodfuncContext,0)


        def coordx(self):
            return self.getTypedRuleContext(gcodeParser.CoordxContext,0)


        def coordy(self):
            return self.getTypedRuleContext(gcodeParser.CoordyContext,0)


        def fimdelinha(self):
            return self.getTypedRuleContext(gcodeParser.FimdelinhaContext,0)


        def coordi(self):
            return self.getTypedRuleContext(gcodeParser.CoordiContext,0)


        def coordj(self):
            return self.getTypedRuleContext(gcodeParser.CoordjContext,0)


        def mfunc(self):
            return self.getTypedRuleContext(gcodeParser.MfuncContext,0)


        def getRuleIndex(self):
            return gcodeParser.RULE_statement




    def statement(self):

        localctx = gcodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.numerolinha()
                self.state = 39
                self.codfunc()
                self.state = 40
                self.coordx()
                self.state = 41
                self.coordy()
                self.state = 42
                self.fimdelinha()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.numerolinha()
                self.state = 45
                self.codfunc()
                self.state = 46
                self.coordx()
                self.state = 47
                self.coordy()
                self.state = 48
                self.coordi()
                self.state = 49
                self.coordj()
                self.state = 50
                self.fimdelinha()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.numerolinha()
                self.state = 53
                self.codfunc()
                self.state = 54
                self.coordx()
                self.state = 55
                self.fimdelinha()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.numerolinha()
                self.state = 58
                self.codfunc()
                self.state = 59
                self.coordy()
                self.state = 60
                self.fimdelinha()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 62
                self.numerolinha()
                self.state = 63
                self.mfunc()
                self.state = 64
                self.fimdelinha()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 66
                self.fimdelinha()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumerolinhaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(gcodeParser.NUMBER, 0)

        def getRuleIndex(self):
            return gcodeParser.RULE_numerolinha




    def numerolinha(self):

        localctx = gcodeParser.NumerolinhaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_numerolinha)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(gcodeParser.T__0)
            self.state = 70
            self.match(gcodeParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Num3digContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(gcodeParser.NUMBER)
            else:
                return self.getToken(gcodeParser.NUMBER, i)

        def getRuleIndex(self):
            return gcodeParser.RULE_num3dig




    def num3dig(self):

        localctx = gcodeParser.Num3digContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_num3dig)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(gcodeParser.NUMBER)
            self.state = 73
            self.match(gcodeParser.NUMBER)
            self.state = 74
            self.match(gcodeParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MfimContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gcodeParser.RULE_mfim




    def mfim(self):

        localctx = gcodeParser.MfimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mfim)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(gcodeParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(gcodeParser.STRING, 0)

        def getRuleIndex(self):
            return gcodeParser.RULE_mfunc




    def mfunc(self):

        localctx = gcodeParser.MfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mfunc)
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(gcodeParser.T__2)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(gcodeParser.T__3)
                self.state = 80
                self.match(gcodeParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gcodeParser.RULE_codfunc




    def codfunc(self):

        localctx = gcodeParser.CodfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_codfunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 224) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coord(self):
            return self.getTypedRuleContext(gcodeParser.CoordContext,0)


        def getRuleIndex(self):
            return gcodeParser.RULE_coordx




    def coordx(self):

        localctx = gcodeParser.CoordxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_coordx)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(gcodeParser.T__7)
            self.state = 86
            self.coord()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coord(self):
            return self.getTypedRuleContext(gcodeParser.CoordContext,0)


        def getRuleIndex(self):
            return gcodeParser.RULE_coordy




    def coordy(self):

        localctx = gcodeParser.CoordyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_coordy)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(gcodeParser.T__8)
            self.state = 89
            self.coord()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coord(self):
            return self.getTypedRuleContext(gcodeParser.CoordContext,0)


        def getRuleIndex(self):
            return gcodeParser.RULE_coordi




    def coordi(self):

        localctx = gcodeParser.CoordiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_coordi)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(gcodeParser.T__9)
            self.state = 92
            self.coord()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordjContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coord(self):
            return self.getTypedRuleContext(gcodeParser.CoordContext,0)


        def getRuleIndex(self):
            return gcodeParser.RULE_coordj




    def coordj(self):

        localctx = gcodeParser.CoordjContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_coordj)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(gcodeParser.T__10)
            self.state = 95
            self.coord()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(gcodeParser.NUMBER, 0)

        def getRuleIndex(self):
            return gcodeParser.RULE_coord




    def coord(self):

        localctx = gcodeParser.CoordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_coord)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(gcodeParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FimdelinhaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gcodeParser.RULE_fimdelinha




    def fimdelinha(self):

        localctx = gcodeParser.FimdelinhaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_fimdelinha)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            _la = self._input.LA(1)
            if not(_la==12 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





